syntax = "proto3";

package rivet.backend.pkg.cluster.datacenter_topology_get;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid datacenter_ids = 1;
}

message Response {
	message Server {
		rivet.common.Uuid server_id = 1;
		string node_id = 2;
		float cpu = 3; // % of total
		float memory = 4; // % of total
		float disk = 5; // % of total
	}

	message Datacenter {
		rivet.common.Uuid datacenter_id = 1;
		repeated Server servers = 2;
	}

	repeated Datacenter datacenters = 1;
}
